--- a/src/style.scss
+++ b/src/style.scss
@@ -46,7 +46,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  border-bottom: 1px solid aquamarine;
+  border-bottom: 2px solid #516395;
   padding-bottom: 15px;
 }
 .weather__info {
